// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo renders correctly - custom color 1`] = `
<View
  accessibilityLabel="Flent logo"
  accessibilityRole="image"
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "height": 48,
        "width": 40.05,
      },
    ]
  }
>
  <Svg
    fill="none"
    height={48}
    viewBox="0 0 34 40"
    width={40.05}
  >
    <Path
      d="M12.4751 40H3.72631V21.2062H0V16.0217H3.72631C1.65252 7.98576 7.50667 3.16855 10.693 1.76445C20.025 -3.16081 29.7028 3.38457 33.3751 7.27293V40H24.6263V11.6473C19.5714 3.35216 13.2312 5.27474 10.693 7.27293C7.45266 12.8463 12.0431 15.4277 14.7433 16.0217H19.2798V21.2062H12.4751V40Z"
      fill="#FF9A6D"
    />
  </Svg>
</View>
`;

exports[`Logo renders correctly - custom size and color 1`] = `
<View
  accessibilityLabel="Flent logo"
  accessibilityRole="image"
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "height": 64,
        "width": 53.400000000000006,
      },
    ]
  }
>
  <Svg
    fill="none"
    height={64}
    viewBox="0 0 34 40"
    width={53.400000000000006}
  >
    <Path
      d="M12.4751 40H3.72631V21.2062H0V16.0217H3.72631C1.65252 7.98576 7.50667 3.16855 10.693 1.76445C20.025 -3.16081 29.7028 3.38457 33.3751 7.27293V40H24.6263V11.6473C19.5714 3.35216 13.2312 5.27474 10.693 7.27293C7.45266 12.8463 12.0431 15.4277 14.7433 16.0217H19.2798V21.2062H12.4751V40Z"
      fill="#E5484D"
    />
  </Svg>
</View>
`;

exports[`Logo renders correctly - default size (48) 1`] = `
<View
  accessibilityLabel="Flent logo"
  accessibilityRole="image"
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "height": 48,
        "width": 40.05,
      },
    ]
  }
>
  <Svg
    fill="none"
    height={48}
    viewBox="0 0 34 40"
    width={40.05}
  >
    <Path
      d="M12.4751 40H3.72631V21.2062H0V16.0217H3.72631C1.65252 7.98576 7.50667 3.16855 10.693 1.76445C20.025 -3.16081 29.7028 3.38457 33.3751 7.27293V40H24.6263V11.6473C19.5714 3.35216 13.2312 5.27474 10.693 7.27293C7.45266 12.8463 12.0431 15.4277 14.7433 16.0217H19.2798V21.2062H12.4751V40Z"
      fill="#FFFFFF"
    />
  </Svg>
</View>
`;

exports[`Logo renders correctly - large size (96) 1`] = `
<View
  accessibilityLabel="Flent logo"
  accessibilityRole="image"
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "height": 96,
        "width": 80.1,
      },
    ]
  }
>
  <Svg
    fill="none"
    height={96}
    viewBox="0 0 34 40"
    width={80.1}
  >
    <Path
      d="M12.4751 40H3.72631V21.2062H0V16.0217H3.72631C1.65252 7.98576 7.50667 3.16855 10.693 1.76445C20.025 -3.16081 29.7028 3.38457 33.3751 7.27293V40H24.6263V11.6473C19.5714 3.35216 13.2312 5.27474 10.693 7.27293C7.45266 12.8463 12.0431 15.4277 14.7433 16.0217H19.2798V21.2062H12.4751V40Z"
      fill="#FFFFFF"
    />
  </Svg>
</View>
`;

exports[`Logo renders correctly - small size (24) 1`] = `
<View
  accessibilityLabel="Flent logo"
  accessibilityRole="image"
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "height": 24,
        "width": 20.025,
      },
    ]
  }
>
  <Svg
    fill="none"
    height={24}
    viewBox="0 0 34 40"
    width={20.025}
  >
    <Path
      d="M12.4751 40H3.72631V21.2062H0V16.0217H3.72631C1.65252 7.98576 7.50667 3.16855 10.693 1.76445C20.025 -3.16081 29.7028 3.38457 33.3751 7.27293V40H24.6263V11.6473C19.5714 3.35216 13.2312 5.27474 10.693 7.27293C7.45266 12.8463 12.0431 15.4277 14.7433 16.0217H19.2798V21.2062H12.4751V40Z"
      fill="#FFFFFF"
    />
  </Svg>
</View>
`;

exports[`Logo renders with hex color 1`] = `
<View
  accessibilityLabel="Flent logo"
  accessibilityRole="image"
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "height": 48,
        "width": 40.05,
      },
    ]
  }
>
  <Svg
    fill="none"
    height={48}
    viewBox="0 0 34 40"
    width={40.05}
  >
    <Path
      d="M12.4751 40H3.72631V21.2062H0V16.0217H3.72631C1.65252 7.98576 7.50667 3.16855 10.693 1.76445C20.025 -3.16081 29.7028 3.38457 33.3751 7.27293V40H24.6263V11.6473C19.5714 3.35216 13.2312 5.27474 10.693 7.27293C7.45266 12.8463 12.0431 15.4277 14.7433 16.0217H19.2798V21.2062H12.4751V40Z"
      fill="#00FF00"
    />
  </Svg>
</View>
`;

exports[`Logo renders with very large size 1`] = `
<View
  accessibilityLabel="Flent logo"
  accessibilityRole="image"
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "height": 500,
        "width": 417.1875,
      },
    ]
  }
>
  <Svg
    fill="none"
    height={500}
    viewBox="0 0 34 40"
    width={417.1875}
  >
    <Path
      d="M12.4751 40H3.72631V21.2062H0V16.0217H3.72631C1.65252 7.98576 7.50667 3.16855 10.693 1.76445C20.025 -3.16081 29.7028 3.38457 33.3751 7.27293V40H24.6263V11.6473C19.5714 3.35216 13.2312 5.27474 10.693 7.27293C7.45266 12.8463 12.0431 15.4277 14.7433 16.0217H19.2798V21.2062H12.4751V40Z"
      fill="#FFFFFF"
    />
  </Svg>
</View>
`;

exports[`Logo renders with zero size 1`] = `
<View
  accessibilityLabel="Flent logo"
  accessibilityRole="image"
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "height": 0,
        "width": 0,
      },
    ]
  }
>
  <Svg
    fill="none"
    height={0}
    viewBox="0 0 34 40"
    width={0}
  >
    <Path
      d="M12.4751 40H3.72631V21.2062H0V16.0217H3.72631C1.65252 7.98576 7.50667 3.16855 10.693 1.76445C20.025 -3.16081 29.7028 3.38457 33.3751 7.27293V40H24.6263V11.6473C19.5714 3.35216 13.2312 5.27474 10.693 7.27293C7.45266 12.8463 12.0431 15.4277 14.7433 16.0217H19.2798V21.2062H12.4751V40Z"
      fill="#FFFFFF"
    />
  </Svg>
</View>
`;
